<resources>
    <string name="app_name" translatable="false">P.E.T.</string>
    <string name="toast_discardchanges">Changes discarded</string>
    <string name="navigation_open_state">Navigation Drawer opened.</string>
    <string name="navigation_closed_state">Navigation Drawer closed.</string>
    <string name="general_evidence_button">Evidence</string>
    <string name="general_maps_button">Maps</string>
    <string name="general_tasks_button">Tasks</string>
    <string name="general_codex_button">Codex</string>
    <string name="general_navigation_menu">Menu</string>
    <string name="general_navigation_home">Home</string>
    <string name="general_navigation_primary">Primary</string>
    <string name="general_navigation_secondary">Secondary</string>
    <string name="general_navigation_alternative">Alternative</string>
    <string name="general_navigation_tools">Tools</string>
    <string name="general_navigation_settings" translatable="false">Settings</string>
    <string name="general_navigation_system" translatable="false">System</string>
    <string name="general_evidence_reset_button">Reset</string>
    <string name="titlescreen_beta_label">Beta</string>
    <string name="titlescreen_description">The ultimate evidence tool</string>
    <string name="titlescreen_button">Start Hunting</string>
    <string name="titlescreen_languages_label">Select Language</string>
    <string name="review_requesttitle">Please consider rating P.E.T.!</string>
    <string name="review_accept">Sure!</string>
    <string name="review_decline">No thanks</string>
    <string name="review_storelink_app" translatable="false">market://details?id=com.TritiumGaming.phasmophobiaevidencepicker</string>
    <string name="review_storelink_website" translatable="false">https://play.google.com/store/apps/details?id=com.TritiumGaming.phasmophobiaevidencepicker</string>
    <string name="language_fullName_chinese_s" translatable="false">Chinese (Simplified)</string>
    <string name="language_fullName_czech" translatable="false">Czech</string>
    <string name="language_fullName_english" translatable="false">English</string>
    <string name="language_fullName_french" translatable="false">Français</string>
    <string name="language_fullName_german" translatable="false">Deutsch</string>
    <string name="language_fullName_italian" translatable="false">Italian</string>
    <string name="language_fullName_japanese" translatable="false">Japanese</string>
    <string name="language_fullName_portuguese" translatable="false">Portuguese</string>
    <string name="language_fullName_russian" translatable="false">Russian</string>
    <string name="language_fullName_spanish" translatable="false">Español</string>
    <string name="language_abbrName_chinese_simplified" translatable="false">zh</string>
    <string name="language_abbrName_czech" translatable="false">cs</string>
    <string name="language_abbrName_english" translatable="false">en</string>
    <string name="language_abbrName_french" translatable="false">fr</string>
    <string name="language_abbrName_german" translatable="false">de</string>
    <string name="language_abbrName_italian" translatable="false">it</string>
    <string name="language_abbrName_japanese" translatable="false">ja</string>
    <string name="language_abbrName_portuguese" translatable="false">pt</string>
    <string name="language_abbrName_russian" translatable="false">ru</string>
    <string name="language_abbrName_spanish" translatable="false">es</string>
    <string name="aboutinfo_discordInvite" translatable="false">RawQP9H7y7</string>
    <string name="aboutinfo_title_petstylized" translatable="false">
        <![CDATA[
                <font color=#FF0000>P</font>.<font color=#FF0000>E</font>.<font color=#FF0000>T</font>.
            ]]>
    </string>
    <string name="aboutinfo_developerinfo_devname" translatable="false">Tritium Studios</string>
    <string name="aboutinfo_developerinfo_address" translatable="false">TritiumGamingStudiosDM@gmail.com</string>
    <string name="aboutinfo_title_about">About</string>
    <string name="aboutinfo_version">Version</string>
    <string name="aboutinfo_aboutapp_info">
        <![CDATA[
            <p><font color=#CC3C3C>Phasmophobia</font> is a unique horror game developed by <font color=#CC3C3C>Kinetic Games</font>.</p>
            <p><font color=#CC3C3C>P.E.T.</font> is an unofficial companion tool\-\- acting both as a guide for new players and as an assistant for the veterans.</p>
            <p><font color=#CC3C3C>Thank you so much for using P.E.T.!</font></p>
        ]]>
    </string>
    <string name="aboutinfo_developerinfo_title">Developer Info</string>
    <string name="aboutinfo_developerinfo_developer">Developer</string>
    <string name="aboutinfo_developerinfo_contact">Contact</string>
    <string name="aboutinfo_joindiscord">Join the Discord</string>
    <string name="aboutinfo_specialthanks_title">Special Thanks</string>
    <string name="settings_title">Settings</string>
    <string name="settings_confirm">Confirm</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_generalsettings">General Settings</string>
    <string name="settings_extrasettings">Extra Settings</string>
    <string name="settings_appearancesettings">Appearance</string>
    <string name="settings_fontstylesettings">Font Style</string>
    <string name="settings_adsconsentcontrolsettings">GDPR Settings</string>
    <string name="settings_adsconsentcontrolsettings_button">Edit</string>
    <string name="settings_screenalwayson">Always keep the screen on</string>
    <string name="settings_networktitle">Allow Mobile Data</string>
    <string name="settings_huntwarningflashtimeout">Hunt warning flash duration</string>
    <string name="settings_huntwarningflashtimeout_never">Never Timeout</string>
    <string name="settings_enableLeftHandSupport">Enable Left-Handed Mode</string>
    <string name="settings_enablehuntaudioqueue">Enable Hunt Warning Audio</string>
    <string name="settings_colorblindnessmode_title">Colorblind Mode</string>
    <string name="settings_colorblindnessmode_note">(Will take effect after leaving Settings)</string>
    <string name="settings_colortheme_title" translatable="false">Skin</string>
    <string name="settings_colortheme_note" translatable="false">(Colorblindness selection takes precedence)</string>
    <string name="settings_colorblindnessmode_normal">None</string>
    <string name="settings_colorblindnessmode_defaultName" translatable="false">Default</string>
    <string name="settings_colorblindnessmode_defaultID" translatable="false">CzjtxSbXRwIpX8SYR0ttngAND</string>
    <string name="settings_colortheme_normal" translatable="false">P.E.T. Classic</string>
    <string name="settings_colorblindnessmode_monochromacy">Achromatopsia</string>
    <string name="settings_colorblindnessmode_deuteranomaly">Deuteranopia</string>
    <string name="settings_colorblindnessmode_protanomaly">Protanopia</string>
    <string name="settings_colorblindnessmode_tritanomaly">Tritanopia</string>
    <string name="settings_skin_whiteboard" translatable="false">Whiteboard</string>
    <string name="settings_colormode_prestige_recruit" translatable="false">Recruit</string>
    <string name="settings_colormode_prestige_investigator" translatable="false">Investigator</string>
    <string name="settings_colormode_prestige_privateinvestigator" translatable="false">Private Investigator</string>
    <string name="settings_colormode_prestige_detective" translatable="false">Detective</string>
    <string name="settings_colormode_prestige_technician" translatable="false">Technician</string>
    <string name="settings_colormode_prestige_specialist" translatable="false">Specialist</string>
    <string name="settings_colormode_prestige_analyst" translatable="false">Analyst</string>
    <string name="settings_colormode_prestige_agent" translatable="false">Agent</string>
    <string name="settings_colormode_prestige_operator" translatable="false">Operator</string>
    <string name="settings_colormode_prestige_commissioner" translatable="false">Commissioner</string>
    <string name="settings_colormode_event_easter" translatable="false">Easter</string>
    <string name="settings_colormode_event_halloween" translatable="false">Halloween</string>
    <string name="settings_colormode_event_holiday22" translatable="false">Holiday \'22</string>
    <string name="settings_colormode_event_holiday23" translatable="false">Holiday \'23</string>
    <string name="settings_colormode_community_discord" translatable="false">Discord</string>
    <string name="settings_colormode_community_contentcreator" translatable="false">Content Creator</string>
    <string name="settings_colormode_community_developer" translatable="false">Developer</string>
    <string name="settings_colormode_community_translator" translatable="false">Translator</string>
    <string name="settings_colormode_community_winner" translatable="false">Winner</string>
    <string name="settings_colormode_community_artist" translatable="false">Artist</string>
    <string name="settings_fontstyle_classic">P.E.T. Classic</string>
    <string name="settings_fontstyle_android">Android</string>
    <string name="settings_fontstyle_journal">Journal</string>
    <string name="settings_fontstyle_brick">Brick</string>
    <string name="settings_fontstyle_clean">Clean</string>
    <string name="settings_fontstyle_longcang" translatable="false">Long Cang</string>
    <string name="settings_fontstyle_newtegmon" translatable="false">New Tegomin</string>
    <string name="settings_fontstyle_neucha" translatable="false">Neucha</string>
    <string name="settings_fontstyle_jetbrainsmono" translatable="false">Jetbrains Mono</string>
    <string name="messagecenter_inboxestitle_label">Message Center</string>
    <string name="messagecenter_inbox_general">General News</string>
    <string name="messagecenter_inbox_pet">P.E.T. Changelog</string>
    <string name="messagecenter_inbox_phas">Phasmophobia Changelog</string>
    <string name="investigation_average_sanity_title" translatable="false">Average Sanity</string>
    <string name="investigation_prep_time_title" translatable="false">Prep Time</string>
    <string name="investigation_your_sanity_level_title" translatable="false">Your Sanity level</string>
    <string name="investigation_timer_label">Preparation Time:</string>
    <string name="investigation_timer_difficulty_default">None</string>
    <string name="investigation_timer_difficulty_1">Amateur</string>
    <string name="investigation_timer_difficulty_2">Intermediate</string>
    <string name="investigation_timer_difficulty_3">Professional</string>
    <string name="investigation_timer_difficulty_4">Nightmare</string>
    <string name="investigation_timer_difficulty_5">Insanity</string>
    <string name="investigation_timer_difficulty_label">Difficulty:</string>
    <string name="investigation_timer_maplabel">Map:</string>
    <string name="investigation_timer_actionlabel">ACTION</string>
    <string name="investigation_timer_setuplabel">SETUP</string>
    <string name="investigation_sanity_huntwarn">HUNT WARN</string>
    <string name="investigation_sanitymeter_title">Max Sanity</string>
    <string name="investigation_section_title_ghosts">Ghosts</string>
    <string name="investigation_section_title_evidence">Evidence</string>
    <string name="investigation_timer_time_1" translatable="false">300000</string>
    <string name="investigation_timer_time_2" translatable="false">120000</string>
    <string name="investigation_timer_time_3" translatable="false">0</string>
    <string name="objectives_title_optional_objectives">Optional Objectives</string>
    <string name="objectives_title_investigation_debrief">Investigation Debrief</string>
    <string name="objectives_title_ghost_name">Ghost\'s Name:</string>
</resources>